# object_detector

./: CMakeLists.txt  package.xml
msg/: DetectedObject.msg  DetectedObjects.msg
src/: Consumable.hpp  ObjectDetector.cpp  ObjectDetector.hpp  Thread.hpp  atomic_queue.hpp  main.cpp  ringbuffer.hpp
